--- a/SherpaDesk/MainPage.xaml
+++ b/SherpaDesk/MainPage.xaml
@@ -6,44 +6,46 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"  
     mc:Ignorable="d" Loaded="Page_Loaded" RequestedTheme="Light">
-    <ScrollViewer x:Name="scrollViewer"
+    <Grid>
+        <StackPanel Grid.Row="0" Canvas.ZIndex="1000" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <ProgressRing Name="progressRing" Foreground="#FF040029" Margin="0,0,0,0" Height="200" Width="200" BorderBrush="#FF627CC2" />
+        </StackPanel>
+        <ScrollViewer x:Name="scrollViewer"
 						  VerticalAlignment="Stretch"
                           HorizontalAlignment="Stretch"
 						  VerticalScrollBarVisibility="Disabled"
 						  VerticalScrollMode="Disabled"
 						  HorizontalScrollMode="Enabled"
 						  HorizontalScrollBarVisibility="Auto">
-        <Grid Name="LayoutRoot" Background="#EBEBEB">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <StackPanel Grid.Row="0" Canvas.ZIndex="1000" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <ProgressRing Name="progressRing" HorizontalAlignment="Left" Foreground="#FF040029" Margin="0,0,0,0" Height="200" Width="200" BorderBrush="#FF627CC2" />
-            </StackPanel>
-            <StackPanel x:Name="FullscreenPanel" Grid.Row="0" Visibility="Collapsed" Canvas.ZIndex="10" VerticalAlignment="Center" HorizontalAlignment="Center" Tapped="FullscreenPanel_Tapped" Background="Black" Margin="683,388,683,380">
-                <Image x:Name="ImageFull" Stretch="None" Margin="5,5,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Canvas.ZIndex="10" />
-            </StackPanel>
-
-            <Grid Canvas.ZIndex="11">
+            <Grid Name="LayoutRoot" Background="#EBEBEB">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Frame x:Name="timesheetFrame" Canvas.ZIndex="11" VerticalAlignment="Stretch" Grid.Column="0" />
-                <Frame x:Name="infoFrame" Canvas.ZIndex="11" VerticalAlignment="Stretch" Grid.Column="1" />
-                <Frame x:Name="workListFrame" Canvas.ZIndex="11" VerticalAlignment="Stretch" Grid.Column="2" />
-                <Frame x:Name="workDetailsFrame" Canvas.ZIndex="11" VerticalAlignment="Stretch" Grid.Column="3" />
-            </Grid>
+                <StackPanel x:Name="FullscreenPanel" Grid.Row="0" Visibility="Collapsed" Canvas.ZIndex="10" VerticalAlignment="Center" HorizontalAlignment="Center" Tapped="FullscreenPanel_Tapped" Background="Black" Margin="683,388,683,380">
+                    <Image x:Name="ImageFull" Stretch="None" Margin="5,5,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Canvas.ZIndex="10" />
+                </StackPanel>
 
-            <TextBlock Name="BuildNumber"></TextBlock>
-        </Grid>
-    </ScrollViewer>
+                <Grid Canvas.ZIndex="11">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Frame x:Name="timesheetFrame" Canvas.ZIndex="11" VerticalAlignment="Stretch" Grid.Column="0" />
+                    <Frame x:Name="infoFrame" Canvas.ZIndex="11" VerticalAlignment="Stretch" Grid.Column="1" />
+                    <Frame x:Name="workListFrame" Canvas.ZIndex="11" VerticalAlignment="Stretch" Grid.Column="2" />
+                    <Frame x:Name="workDetailsFrame" Canvas.ZIndex="11" VerticalAlignment="Stretch" Grid.Column="3" />
+                </Grid>
+
+                <TextBlock Name="BuildNumber"></TextBlock>
+            </Grid>
+        </ScrollViewer>
+    </Grid>
 </Page>
