--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -1,31 +1,52 @@
 ﻿<common:LayoutAwarePage
-    x:Name="pageRoot"
-    x:Class="SherpaDesk.TicketDetails"
-    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk"
+    xmlns:localModels="using:SherpaDesk.Models"
     xmlns:common="using:SherpaDesk.Common"
     xmlns:Controls="using:WinRTXamlToolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:telerik="using:Telerik.UI.Xaml.Controls.Grid" 
     xmlns:telerikPrimitives="using:Telerik.UI.Xaml.Controls.Primitives"
+    xmlns:telerikControls="using:Telerik.UI.Xaml.Controls"
     xmlns:telerikPagination="using:Telerik.UI.Xaml.Controls.Primitives.Pagination"    
     xmlns:gridPrimitives="using:Telerik.UI.Xaml.Controls.Grid.Primitives"    
+    xmlns:Chart="using:Telerik.UI.Xaml.Controls.Chart" xmlns:Charting="using:Telerik.Charting"
+    x:Name="pageRoot"
+    x:Class="SherpaDesk.TicketDetails"
+    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Mode=Self}}"    
     mc:Ignorable="d" Loaded="pageRoot_Loaded">
 
-    <Page.Resources>
+    <common:LayoutAwarePage.Resources>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
         <x:String x:Key="AppName">My Application</x:String>
-    </Page.Resources>
+        <Chart:ChartPalette x:Key="CustomPalette">
+            <Chart:ChartPalette.FillEntries>
+                <Chart:PaletteEntryCollection>
+                    <SolidColorBrush Color="#ebebeb"></SolidColorBrush>
+                    <SolidColorBrush Color="#96c8dd"></SolidColorBrush>
+                    <SolidColorBrush Color="#96c8dd"></SolidColorBrush>
+                    <SolidColorBrush Color="#96c8dd"></SolidColorBrush>
+                </Chart:PaletteEntryCollection>
+            </Chart:ChartPalette.FillEntries>
+            <Chart:ChartPalette.StrokeEntries>
+                <Chart:PaletteEntryCollection>
+                    <SolidColorBrush Color="Transparent"></SolidColorBrush>
+                    <SolidColorBrush Color="Transparent"></SolidColorBrush>
+                    <SolidColorBrush Color="Transparent"></SolidColorBrush>
+                    <SolidColorBrush Color="Transparent"></SolidColorBrush>
+                </Chart:PaletteEntryCollection>
+            </Chart:ChartPalette.StrokeEntries>
+        </Chart:ChartPalette>
+    </common:LayoutAwarePage.Resources>
 
     <!--
         This grid acts as a root panel for the page that defines two rows:
         * Row 0 contains the back button and page title
         * Row 1 contains the rest of the page layout
     -->
-    <Grid x:Name="grid" Style="{StaticResource LayoutRootStyle}" Background="Transparent" RequestedTheme="Light" Margin="0,0,50,0">
+    <Grid x:Name="grid" Style="{StaticResource LayoutRootStyle}" Background="White" RequestedTheme="Light" Margin="0,0,50,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="auto" />
@@ -36,10 +57,39 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
+        <VisualStateManager.VisualStateGroups>
+
+            <!-- Visual states reflect the application's view state -->
+            <VisualStateGroup x:Name="ApplicationViewStates">
+                <VisualState x:Name="FullScreenLandscape"/>
+                <VisualState x:Name="Filled"/>
+
+                <!-- The entire page respects the narrower 100-pixel margin convention for portrait -->
+                <VisualState x:Name="FullScreenPortrait">
+                    <Storyboard>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PortraitBackButtonStyle}"/>
+                        </ObjectAnimationUsingKeyFrames>
+                    </Storyboard>
+                </VisualState>
+
+                <!-- The back button and title have different styles when snapped -->
+                <VisualState x:Name="Snapped">
+                    <Storyboard>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedBackButtonStyle}"/>
+                        </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle" Storyboard.TargetProperty="Style">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
+                        </ObjectAnimationUsingKeyFrames>
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <TextBlock x:Name="pageTitle"                   
-                   Margin="20,30,20,20" 
-                   Text="Ticket Details"                   
-                   Style="{StaticResource PageHeaderTextStyle}" />
+			Margin="20,30,20,20" 
+			Text="Ticket Details"                   
+			Style="{StaticResource PageHeaderTextStyle}" />
         <Grid Grid.Row="1" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
@@ -110,42 +160,53 @@
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
             </telerikPrimitives:RadCustomHubTile>
         </Grid>
-        <Grid Grid.Column="1" Grid.Row="1" Margin="20,0,0,0" Width="700">
+        <Grid Grid.Column="1" Grid.Row="1" Margin="20,0,0,0" Width="auto" MaxWidth="2000">
             <Grid.RowDefinitions>
-                <RowDefinition />
+                <RowDefinition Height="auto" />
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock FontSize="60" Text="2068" Foreground="#8b8b8b" Margin="0,0,30,0" />
+                <TextBlock FontSize="60" Grid.Column="1" Text="Name of Current Ticket" Foreground="#8b8b8b" />
+            </Grid>
+            <Grid Grid.Row="1" Margin="0,30,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Image Source="Assets/Images/ticket-details-avatar.png" />
+                <Grid Grid.Column="1" VerticalAlignment="Center" Margin="20,0,20,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="Shiva Carter" Foreground="#a6a6a6" FontSize="40" Margin="0,0,0,10" />
+                    <TextBlock Grid.Row="1" Text="SherpaDesk Support | Atlanta" Foreground="#898989" FontSize="20" />
+                    <Grid Grid.Row="2" Margin="0,20,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Initial Post" Foreground="#4a4a4a" FontSize="18" Margin="0,0,5,0" />
+                        <TextBlock Grid.Column="1" Text="16 hours ago" Foreground="#777777" FontSize="18" />
+                    </Grid>
+                </Grid>
+                <Chart:RadPieChart x:Name="detailsChart" Palette="{StaticResource CustomPalette}" Grid.Column="2" VerticalAlignment="Center" Width="200" Height="200" HorizontalAlignment="Left">
+                    <Chart:DoughnutSeries ShowLabels="False">
+                        <Chart:DoughnutSeries.ValueBinding>
+                            <Chart:PropertyNameDataPointBinding PropertyName="Value"/>
+                        </Chart:DoughnutSeries.ValueBinding>
+                    </Chart:DoughnutSeries>
+                </Chart:RadPieChart>
+            </Grid>
         </Grid>
-        <VisualStateManager.VisualStateGroups>
-
-            <!-- Visual states reflect the application's view state -->
-            <VisualStateGroup x:Name="ApplicationViewStates">
-                <VisualState x:Name="FullScreenLandscape"/>
-                <VisualState x:Name="Filled"/>
-
-                <!-- The entire page respects the narrower 100-pixel margin convention for portrait -->
-                <VisualState x:Name="FullScreenPortrait">
-                    <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PortraitBackButtonStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                    </Storyboard>
-                </VisualState>
-
-                <!-- The back button and title have different styles when snapped -->
-                <VisualState x:Name="Snapped">
-                    <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedBackButtonStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                    </Storyboard>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
     </Grid>
 </common:LayoutAwarePage>
