--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -8,6 +8,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:telerik="using:Telerik.UI.Xaml.Controls.Grid" 
+    xmlns:telerikInput="using:Telerik.UI.Xaml.Controls.Input"
     xmlns:telerikPrimitives="using:Telerik.UI.Xaml.Controls.Primitives"
     xmlns:telerikControls="using:Telerik.UI.Xaml.Controls"
     xmlns:telerikPagination="using:Telerik.UI.Xaml.Controls.Primitives.Pagination"    
@@ -173,7 +174,7 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <TextBlock FontSize="60" Text="2068" Foreground="#8b8b8b" Margin="0,0,30,0" />
-                <Grid Grid.Column="1" Width="1200">
+                <Grid Grid.Column="1" MaxWidth="1200">
                     <ScrollViewer Height="75" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Margin="0,0,20,0">
                         <TextBlock FontSize="60" TextWrapping="Wrap" Margin="0,0,0,0" Text="Access is denied. You do not have" Foreground="#8b8b8b" />
                     </ScrollViewer>
@@ -218,6 +219,154 @@
             <Grid Grid.Row="2" Margin="0,30,0,0" Width="1000" HorizontalAlignment="Left">
                 <ScrollViewer Height="200" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
                     <TextBlock FontSize="20" Margin="0,0,20,0" Foreground="#5b5b5b" TextWrapping="Wrap" Text="Tellus lorem tristique taciti ad curae; erat natoque felis purus varius pharetra porttitor habitasse volutpat fusce sagittis. Diam diam magna mauris penatibus ipsum lorem dignissim hendrerit Congue vestibulum massa rutrum vivamus aptent nisi tincidunt sagittis felis ridiculus adipiscing Tellus lorem tristique taciti ad curae; erat natoque felis purus varius pharetra porttitor habitasse volutpat fusce sagittis. Diam diam magna mauris penatibus ipsum lorem dignissim hendrerit Congue vestibulum massa rutrum vivamus aptent nisi tincidunt sagittis felis ridiculus adipiscing" />
+                </ScrollViewer>
+            </Grid>
+        </Grid>
+        <Grid Grid.Column="2" Grid.Row="1" Margin="0,0,50,0" Width="auto">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid Style="{StaticResource LayoutRootStyle}" RequestedTheme="Light" Grid.Row="0" HorizontalAlignment="Center" Background="Transparent">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="Start Time" FontSize="16" VerticalAlignment="Bottom" />
+                    <TextBlock Grid.Column="2" Text="Stop Time" FontSize="16" VerticalAlignment="Bottom" />
+                    <TextBlock Grid.Column="4" Text="Hours" FontSize="16" VerticalAlignment="Bottom" />
+                    <TextBlock Grid.Column="6" Text="% Complete" FontSize="16" VerticalAlignment="Bottom" />
+                    <TextBlock Grid.Column="8" Text="Billable" FontSize="16" VerticalAlignment="Bottom" />
+                    <TextBlock Grid.Column="10" Text="Task Type " FontSize="16" VerticalAlignment="Bottom" />
+                    <telerikInput:RadTimePicker x:Name="StartTimePicker" Grid.Row="1" Width="130" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" />
+                    <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Row="1" Grid.Column="2" Width="130" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" />
+                    <TextBox x:Name="HoursTextBox" Margin="0,4,0,0" Height="20" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Grid.Column="4" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Width="130" />
+                    <TextBlock x:Name="ErrorHours" Grid.Column="4" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
+                    <ComboBox Name="CompleteList" Grid.Column="6" Grid.Row="1" FontSize="16" HorizontalAlignment="Stretch" Margin="0,4,0,0" VerticalAlignment="Top">
+                        <ComboBoxItem Tag="0" />
+                        <ComboBoxItem Content="5%" Tag="5" />
+                        <ComboBoxItem Content="25%" Tag="25" />
+                        <ComboBoxItem Content="50%" Tag="50" />
+                        <ComboBoxItem Content="75%" Tag="75" />
+                        <ComboBoxItem Content="95%" Tag="95" />
+                        <ComboBoxItem Content="100%" Tag="100" />
+                    </ComboBox>
+                    <ComboBox Name="Billable" Grid.Column="8" Grid.Row="1" FontSize="16" HorizontalAlignment="Left" Width="100" Margin="0,4,0,0" VerticalAlignment="Top">
+                        <ComboBoxItem Content="Yes" Tag="1" IsSelected="True" />
+                        <ComboBoxItem Content="No" Tag="0" />
+                    </ComboBox>
+                    <ComboBox Name="TaskTypeList" Grid.Column="10" Grid.Row="1" FontSize="16" HorizontalAlignment="Left" Width="200" Margin="0,4,0,0" VerticalAlignment="Top">
+                    </ComboBox>
+                </Grid>
+                <TextBox Name="CommentsTextbox" FontSize="25" Margin="0,10,0,15" TextWrapping="Wrap" Grid.Row="1" Height="100" ScrollViewer.VerticalScrollMode="Auto" HorizontalAlignment="Stretch" AcceptsReturn="True" />
+                <Grid Grid.Row="2" Width="auto" HorizontalAlignment="Right">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Image Source="Assets/Images/attach-button.png" />
+                    <Grid x:Name="ReplyGrid" Grid.Column="1" Width="150" Height="60" Background="#FF92C74F" VerticalAlignment="Top" Margin="20,0,0,0" PointerEntered="ReplyGrid_PointerEntered" PointerExited="ReplyGrid_PointerExited">
+                        <TextBlock Text="Reply" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="20" />
+                    </Grid>
+                </Grid>
+            </Grid>
+            <Grid Grid.Row="1">
+                <ScrollViewer ScrollViewer.VerticalScrollMode="Auto" Height="400" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid Margin="0,20,20,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="800" />
+                            </Grid.ColumnDefinitions>
+                            <Image Source="Assets/Images/ticket-details-comments-avatar.png" />
+                            <Grid Grid.Column="1" Margin="20,0,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="Miley Cyrus" Foreground="#86abb6" FontSize="30" Margin="0,0,0,10" />
+                                <TextBlock Text="5 hours ago" Foreground="#a6a6a6" Grid.Row="1" Margin="0,0,0,2" />
+                                <TextBlock HorizontalAlignment="Stretch" FontSize="16" Text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut" TextWrapping="Wrap" Grid.Row="2" />
+                            </Grid>
+                        </Grid>
+                        <Grid Margin="0,20,0,0" Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="800" />
+                            </Grid.ColumnDefinitions>
+                            <Image Source="Assets/Images/ticket-details-comments-avatar.png" />
+                            <Grid Grid.Column="1" Margin="20,0,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="Miley Cyrus" Foreground="#86abb6" FontSize="30" Margin="0,0,0,10" />
+                                <TextBlock Text="5 hours ago" Foreground="#a6a6a6" Grid.Row="1" Margin="0,0,0,2" />
+                                <TextBlock HorizontalAlignment="Stretch" FontSize="16" Text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut" TextWrapping="Wrap" Grid.Row="2" />
+                            </Grid>
+                        </Grid>
+                        <Grid Margin="0,20,0,0" Grid.Row="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="800" />
+                            </Grid.ColumnDefinitions>
+                            <Image Source="Assets/Images/ticket-details-comments-avatar.png" />
+                            <Grid Grid.Column="1" Margin="20,0,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="Miley Cyrus" Foreground="#86abb6" FontSize="30" Margin="0,0,0,10" />
+                                <TextBlock Text="5 hours ago" Foreground="#a6a6a6" Grid.Row="1" Margin="0,0,0,2" />
+                                <TextBlock HorizontalAlignment="Stretch" FontSize="16" Text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut" TextWrapping="Wrap" Grid.Row="2" />
+                            </Grid>
+                        </Grid>
+                        <Grid Margin="0,20,0,0" Grid.Row="3">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="800" />
+                            </Grid.ColumnDefinitions>
+                            <Image Source="Assets/Images/ticket-details-comments-avatar.png" />
+                            <Grid Grid.Column="1" Margin="20,0,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="Miley Cyrus" Foreground="#86abb6" FontSize="30" Margin="0,0,0,10" />
+                                <TextBlock Text="5 hours ago" Foreground="#a6a6a6" Grid.Row="1" Margin="0,0,0,2" />
+                                <TextBlock HorizontalAlignment="Stretch" FontSize="16" Text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut" TextWrapping="Wrap" Grid.Row="2" />
+                            </Grid>
+                        </Grid>
+                    </Grid>
                 </ScrollViewer>
             </Grid>
         </Grid>
