--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -147,11 +147,12 @@
                         </Grid>
 
                         <TextBlock HorizontalAlignment="Right" Foreground="#8eb1bb" Grid.Row="8" Margin="10,5,0,5" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Center" FontSize="18" />
-                        <TextBox x:Name="HoursTextBox" Margin="0,5,0,0" HorizontalAlignment="Left" Height="35" InputScope="NumberFullWidth" Text="0.00" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" Width="130" />
-                        <TextBlock x:Name="ErrorHours" Grid.Column="2" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="8" Height="50" VerticalAlignment="Top"/>
+                        <TextBox x:Name="HoursTextBox" Margin="0,5,0,0" HorizontalAlignment="Left" Height="40" InputScope="NumberFullWidth" Text="0.00" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" Width="130" BorderBrush="#FFDEDEDE" />
+
+                        <TextBlock x:Name="ErrorHours" Grid.Column="2" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="8" Height="50" VerticalAlignment="Top" />
 
                         <TextBlock HorizontalAlignment="Right" Foreground="#8eb1bb" Grid.Row="9" Margin="10,5,0,5" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Center" FontSize="18" />
-                        <TextBox x:Name="NoteTextBox" Margin="0,0,0,0" HorizontalAlignment="Stretch" Height="100" InputScope="NumberFullWidth" Grid.Row="9" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
+                        <TextBox x:Name="NoteTextBox" Margin="0,0,0,0" HorizontalAlignment="Stretch" Height="100" BorderBrush="#FFDEDEDE" InputScope="NumberFullWidth" Grid.Row="9" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
 
                         <Button x:Name="SubmitButton" Style="{StaticResource SubmitButtonStyle}" Content="Save Time" Grid.Column="2" Foreground="White" HorizontalAlignment="Left" Margin="-3,14,0,0" Padding="0,0,0,0" Grid.Row="10" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Click="Button_Click" PointerEntered="SubmitButton_PointerEntered" PointerExited="SubmitButton_PointerExited" />
                         <TextBlock Text="or" Grid.Column="2" Grid.Row="10" Grid.RowSpan="2" FontSize="24" VerticalAlignment="Center" Foreground="#85778f" Margin="215,15,0,0" />
